<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ripple="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background_home"
    android:fitsSystemWindows="false">

    <FrameLayout
        android:id="@+id/contentParent"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearlayoutHome"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <View
                android:id="@+id/viewStatusBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".HomeActivity">

                <FrameLayout
                    android:id="@+id/contentChild"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="46dp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@mipmap/action_bar"
                    android:paddingBottom="3dp">

                    <RelativeLayout
                        android:id="@+id/btnLeftMenu"
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:layout_alignParentLeft="true"
                        android:background="@drawable/actionbar_button">

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_centerInParent="true"
                            android:scaleType="fitXY"
                            android:src="@mipmap/ic_left_menu" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/btnBack"
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:layout_alignParentLeft="true"
                        android:background="@drawable/actionbar_button">

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="10dp"
                            android:scaleType="fitXY"
                            android:src="@mipmap/ic_back" />

                    </RelativeLayout>


                    <TextView
                        android:id="@+id/tvActionbarTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/app_name"
                        android:textAllCaps="true"
                        android:textColor="@android:color/white"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <RelativeLayout
                        android:id="@+id/btnMap"
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:layout_alignParentRight="true"
                        android:background="@drawable/actionbar_button">

                        <ImageView
                            android:id="@+id/imgMap"
                            android:layout_width="45dp"
                            android:layout_height="30dp"
                            android:layout_centerInParent="true"
                            android:scaleType="fitXY"
                            android:src="@mipmap/ic_button_map" />

                        <ImageView
                            android:id="@+id/imgHome"
                            android:layout_width="40dp"
                            android:layout_height="30dp"
                            android:layout_centerInParent="true"
                            android:scaleType="fitXY"
                            android:src="@mipmap/ic_home"
                            android:visibility="gone" />
                    </RelativeLayout>
                </RelativeLayout>
            </FrameLayout>
        </LinearLayout>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/flContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:id="@+id/layoutLeftMenu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/background_leftmenu"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@mipmap/cover_leftmenu"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="1"></View>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="1"
                android:orientation="horizontal">

                <com.loser.gotravel.common.RoundedImageView
                    android:id="@+id/imvAvatar"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="20dp"
                    android:scaleType="fitXY"
                    android:src="@mipmap/ic_avatar_default" />

                <TextView
                    android:id="@+id/tvLeftmenuNameAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:textColor="@android:color/white"
                    android:textSize="28sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/leftmenu_ic_width"
                    android:layout_height="@dimen/leftmenu_ic_width"
                    android:src="@mipmap/ic_categories" />

                <TextView
                    style="@style/textView_leftmenu"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/left_menu_home" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/btnBookmark"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/leftmenu_ic_width"
                    android:layout_height="@dimen/leftmenu_ic_width"
                    android:src="@mipmap/ic_bookmark" />

                <TextView
                    style="@style/textView_leftmenu"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/left_menu_bookmark" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/actionbar_button"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/leftmenu_ic_width"
                    android:layout_height="@dimen/leftmenu_ic_width"
                    android:src="@mipmap/ic_profile" />

                <TextView
                    style="@style/textView_leftmenu"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/left_menu_profile" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/leftmenu_ic_width"
                    android:layout_height="@dimen/leftmenu_ic_width"
                    android:src="@mipmap/ic_setting" />

                <TextView
                    style="@style/textView_leftmenu"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/left_menu_setting" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@mipmap/ic_line" />


            <LinearLayout
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/leftmenu_ic_width"
                    android:layout_height="@dimen/leftmenu_ic_width"
                    android:src="@mipmap/ic_login" />

                <TextView
                    android:id="@+id/tvLogin"
                    style="@style/textView_leftmenu"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/left_menu_login" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</android.support.v4.widget.DrawerLayout>